[package]
name = "nickel_mustache"
version = "0.1.1"
authors = ["Kevin Butler <haqkrs@gmail.com>"]
description = "Flexible Mustache template rendering for nickel"
keywords = ["mustache", "nickel", "templates", "web"]
license = "MIT"
repository = "https://github.com/zpallin/nickel-mustache"
documentation = "http://ryman.github.io/nickel-mustache"

[dependencies]
nickel = "^0.8.1"
mustache = "0.6"
rustc-serialize = "0.3"

[dev-dependencies]
hyper = "0.6"
